--- a/public/css/style-mobile.css
+++ b/public/css/style-mobile.css
@@ -174,6 +174,28 @@
 .gm-style .gm-style-iw-c{
     max-width: 465px!important;
 }
+#modalBooking{
+    display: flex;
+}
+.box-info-item-map{
+    width: 65%;
+}
+.name-address-map{
+    font-size: 15px;
+}
+.box-img-item-map{
+    width: 35%;
+}
+.gm-ui-hover-effect{
+    width: 31px!important;
+    height: 31px!important;
+}
+.gm-style-iw-ch{
+    padding-top: 0px!important;
+}
+.gm-ui-hover-effect span{
+    margin: 0px!important;
+}
 @media (max-width: 1400px) {
     .header .header-detail--left .back h5 {
         font-size: 16px;
@@ -1048,7 +1070,11 @@
         margin-right: 10px;
     }
     .gm-style .gm-style-iw-c{
-        max-width: 300px!important;
+        max-width: 340px!important;
+        top: 305px!important;
+    }
+    .box-info-item-map span{
+        font-size: 12px;
     }
     .name-address-map{
         font-size: 14px;
