update button hover

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1128,7 +1128,7 @@ span.material-symbols-outlined {
     cursor: default;
 }
 
-#show_inf #inf-doctor #about #opt_btn .button:hover {
+#show_inf #inf-doctor #about #opt_btn .button:not(:disabled):hover {
     background: #45C3D2;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
