--- a/public/css/news.scss
+++ b/public/css/news.scss
@@ -197,7 +197,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
-        height: 44px;
+        margin-bottom: 7px;
     }
 
     .max-5-line-title {
@@ -300,7 +300,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
-        height: 44px;
+        margin-bottom: 7px;
     }
 
     .max-5-line-title {
