--- a/public/css/file.scss
+++ b/public/css/file.scss
@@ -5,9 +5,11 @@
 }
 
 .input-quantity {
-    font-size: 24px;
+    font-size: 16px;
     border: 1px solid #ccc;
-    border-radius: 3px
+    border-radius: 3px;
+    text-align: center;
+    width: 15%!important;
 }
 
 .header {
