--- a/public/css/recruitment.css
+++ b/public/css/recruitment.css
@@ -295,19 +295,19 @@ a, input, button {
     line-height: normal;
 }
 .text-font-24 {
-    font-size: 24px;
+    font-size: 18px;
     margin-top: 24px;
     font-weight: 800;
 }
 .ac-choose {
-    height: 56px;
     width: 100%;
-    padding: 0px 16px 0px 8px;
+    padding: 10px 16px 10px 8px;
     background-color: #f3f3f3;
     border-radius: 8px;
     border: 1px solid #eaeaea;
     color: #929292;
     margin-right: 5px;
+    outline: unset;
 }
 .mt-110 {
     margin-top: 110px;
@@ -350,8 +350,7 @@ a, input, button {
     }
 
     .ac-email {
-        height: 56px;
-        padding: 20px 16px;
+        padding: 10px 16px;
         width: 100%;
         background-color: #f3f3f3;
         border-radius: 8px;
@@ -394,7 +393,6 @@ a, input, button {
     .ac-nation {
         padding: 10px 16px;
         width: 100%;
-        height: 56px;
         background-color: #f3f3f3;
         border-radius: 8px;
         overflow: hidden;
@@ -488,16 +486,19 @@ a, input, button {
     .text-color-gray {
         color: #929292;
     }
+    .text-ads-plan{
+        font-size: 15px;
+    }
     .add-cv-bt {
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 8px;
-        height: 48px;
         width: 270px;
         color: #f7f7f7;
         border: none;
         margin-top: 24px;
+        padding: 10px;
     }
 
 
