update map change

--- a/public/css/homeSpecialist.scss
+++ b/public/css/homeSpecialist.scss
@@ -86,7 +86,7 @@
 
         .title-Danh-sach {
             color: #000;
-            font-size: 24px;
+            font-size: 32px;
             font-style: normal;
             font-weight: 800;
             line-height: normal;
@@ -269,6 +269,7 @@
             .img-pro {
                 img {
                     border-radius: 24px 24px 0px 100px;
+                    height: 300px;
                     object-fit: cover;
                 }
 
