update css medicine

--- a/public/css/file.css
+++ b/public/css/file.css
@@ -508,7 +508,7 @@
   color: rgb(255, 0, 0);
 }
 .product-item .content-pro {
-  padding: 0 10px 10px 10px;
+  padding: 40px 10px 10px 10px;
 }
 .product-item .content-pro .name-pro a {
   color: #ffffff;
