--- a/public/css/file.scss
+++ b/public/css/file.scss
@@ -638,7 +638,7 @@
     }
 
     .content-pro {
-        padding: 0 10px;
+        padding: 40px 10px 10px 10px;
         .name-pro {
             a {
                 color: #ffffff;
